--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 
 
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@500&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Baloo+Chettan+2:wght@400;700&display=swap');
+        @import url('font/Corporate-Logo-Rounded.ttf');
 
         body {
-            color: #444444;
+            color: #4C4949;
             margin: 0;
             margin-bottom: 100px;
-            font-family: 'Baloo Tammudu 2';
+            font-family: 'Baloo Chettan 2';
             background-color: white;
-           
             font-size: 24px;
 
         }
@@ -41,10 +41,29 @@
             padding: 0 10%;
             flex-wrap: wrap;
             margin-bottom: 100px;
+
         }
 
         .maintext {
             margin-top: 150px;
+        }
+
+        .greeting {
+            font-family: 'Corporate Logo Rounded ver2';
+            display: inline-block;
+            position: relative;
+        }
+
+        .greeting::after {
+            display: block;
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 0.3em;
+            background: #c1d8ac;
+            bottom: -0.1em;
+            z-index: -1;
+            border-radius: 0.25em;
         }
 
         li {
@@ -60,11 +79,11 @@
 
         a:link,
         a:visited {
-            color: black;
+            color: #4C4949;
         }
 
         a:hover {
-            color: green;
+            color: #608959;
         }
 
         a {
@@ -90,16 +109,14 @@
         }
 
         .rectangle {
-            background-color: #BED2C3;
+            background-color: #C1D8AC;
             padding: 0 10%;
         }
 
         .wave {
             display: block;
-            fill: #BED2C3;
+            fill: #C1D8AC;
             fill-opacity: 1;
-            height:　110px;
-
         }
 
         .illustration {
@@ -107,6 +124,11 @@
             width: 700px;
             float: right;
 
+        }
+
+
+        .link {
+            color: #608959;
         }
     </style>
 
@@ -126,16 +148,28 @@
 
     <div class="main">
 
-        <h1 class="maintext">Hi,<br>My name is Kotomi Cogdill.</h1>
-        <img class="illustration" src="img/IMG_3338.jpeg" alt="kotomi illustration"></a>
+        <div>
+            <h1 class="maintext"><span class="greeting">はじめまして､</span><br>My name is Kotomi Cogdill.</h1>
+            Billingual UX/UI designer based in the Bay Area. <br>
+            Creating visually aesthetic designs that bring users <br>
+            happy experience is my new <a class="link" href="https://en.wikipedia.org/wiki/Ikigai">ikigai</a>.
+
+        </div>
+
+
+        <img class="illustration" src="img/kotomidrawing.png" alt="kotomi is studying with her dogs"></a>
+
+
+
     </div>
 
 
-    <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100" >
-        <path d="M0 86.4L80.174 64.487C159.722 43.2 320.07 0 479.791 0C640.139 0 799.861 43.2 960.209 50.713C1119.93 57.6 1280.28 28.8 1359.83 14.4L1440 0V216H1359.83C1280.28 216 1119.93 216 960.209 216C799.861 216 640.139 216 479.791 216C320.07 216 159.722 216 80.174 216H0V86.4Z"/>
-        </svg>
+    <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100">
+        <path
+            d="M0 86.4L80.174 64.487C159.722 43.2 320.07 0 479.791 0C640.139 0 799.861 43.2 960.209 50.713C1119.93 57.6 1280.28 28.8 1359.83 14.4L1440 0V216H1359.83C1280.28 216 1119.93 216 960.209 216C799.861 216 640.139 216 479.791 216C320.07 216 159.722 216 80.174 216H0V86.4Z" />
+    </svg>
 
-   
+
 
 
 
@@ -153,11 +187,12 @@
     </div>
 
 
-    <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1439 190" >
-        <path d="M1440 114L1359.83 133.275C1280.28 152 1119.93 190 960.209 190C799.861 190 640.139 152 479.791 145.391C320.07 139.333 159.722 164.667 80.174 177.333L0 190V0H80.174C159.722 0 320.07 0 479.791 0C640.139 0 799.861 0 960.209 0C1119.93 0 1280.28 0 1359.83 0H1440V114Z"/>
-        </svg>
-        
-   
+    <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1439 190">
+        <path
+            d="M1440 114L1359.83 133.275C1280.28 152 1119.93 190 960.209 190C799.861 190 640.139 152 479.791 145.391C320.07 139.333 159.722 164.667 80.174 177.333L0 190V0H80.174C159.722 0 320.07 0 479.791 0C640.139 0 799.861 0 960.209 0C1119.93 0 1280.28 0 1359.83 0H1440V114Z" />
+    </svg>
+
+
 
 
 </body>
