Fix Japanese font

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Baloo+Chettan+2:wght@400;700&display=swap');
-        @import url('font/Corporate-Logo-Rounded.ttf');
+
+        @font-face {
+            font-family: 'Corporate Logo Rounded ver2';
+            src: url('font/Corporate-Logo-Rounded.ttf');
+        }
+
 
         body {
             color: #4C4949;
@@ -15,7 +20,6 @@
             font-family: 'Baloo Chettan 2';
             background-color: white;
             font-size: 24px;
-
         }
 
 
