--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             display: grid;
             grid-template-columns: auto 1fr;
             align-items: center;
+            z-index: 1;
 
         }
 
