--- a/work.html
+++ b/work.html
@@ -8,7 +8,7 @@
 
 
 
-    <title>Kotomi Cogdill</title>
+    <title>Kotomi Cogdill Work</title>
 </head>
 
 <body>
@@ -37,31 +37,6 @@
     </div>
 
 
-    <div class="about content">
-
-        <div>
-            <h1>
-                <div class="translate"><span class="greeting japanese">はじめまして､</span><span class="greeting english">Nice
-                        to meet you,</span>
-                </div>My name is Kotomi
-                Cogdill.
-            </h1>
-            Billingual UX/UI designer based in the Bay Area.<br>
-
-            Creating visually aesthetic designs that bring users <br>
-            happy experience is my new <a class="link" href="https://en.wikipedia.org/wiki/Ikigai">ikigai</a>.<br>
-
-
-
-
-        </div>
-
-
-        <img class="illustration" src="img/kotomidrawing.png" alt="kotomi is studying with her dogs"></a>
-
-
-
-    </div>
 
     <div class="work">
 
