Added a portfolio page
– Added case study in a new page

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 
             <div class="imgs">
-                <a href="">
+                <a href="Mirror.html">
                     <div class="work-rectangle">
                         <div class="work-rectangle-content">
                             <svg width="177" height="64" viewBox="0 0 97 35" fill="none" xmlns="http://www.w3.org/2000/svg"
