--- a/Mirror.html
+++ b/Mirror.html
@@ -37,6 +37,23 @@
     </div>
 
 
+    <div class="hero-mirror">
+
+        <div class="mirror-content">
+            <svg width="177" height="64" viewBox="0 0 97 35" fill="none" xmlns="http://www.w3.org/2000/svg"
+                class="work-logo">
+                <path d="M16 8H2V22" stroke="#4C4949" stroke-width="3" />
+                <path d="M95 19V33C83.1145 33 92.8855 33 81 33" stroke="#4C4949" stroke-width="3" />
+                <path
+                    d="M15.704 14.984H18.296V16.976C18.648 16.224 19.16 15.656 19.832 15.272C20.52 14.888 21.304 14.696 22.184 14.696C24.152 14.712 25.36 15.392 25.808 16.736C26.16 16.112 26.688 15.616 27.392 15.248C28.096 14.88 28.84 14.696 29.624 14.696C30.776 14.696 31.648 14.92 32.24 15.368C32.832 15.8 33.224 16.424 33.416 17.24C33.624 18.04 33.728 19.12 33.728 20.48V26H31.112V20.456C31.112 19.16 30.976 18.232 30.704 17.672C30.448 17.112 29.944 16.832 29.192 16.832C28.184 16.832 27.416 17.176 26.888 17.864C26.376 18.536 26.12 19.424 26.12 20.528V26H23.528V20.072C23.528 19.224 23.496 18.592 23.432 18.176C23.368 17.76 23.192 17.432 22.904 17.192C22.616 16.952 22.152 16.832 21.512 16.832C20.952 16.832 20.424 17 19.928 17.336C19.448 17.672 19.056 18.128 18.752 18.704C18.464 19.264 18.32 19.872 18.32 20.528V26H15.704V14.984ZM37.2241 14.984H39.9121V26H37.2241V14.984ZM38.5441 12.92C38.0481 12.92 37.6321 12.752 37.2961 12.416C36.9601 12.08 36.7921 11.664 36.7921 11.168C36.7921 10.72 36.9601 10.336 37.2961 10.016C37.6321 9.696 38.0481 9.536 38.5441 9.536C39.0241 9.536 39.4321 9.696 39.7681 10.016C40.1041 10.336 40.2721 10.72 40.2721 11.168C40.2721 11.664 40.1041 12.08 39.7681 12.416C39.4481 12.752 39.0401 12.92 38.5441 12.92ZM43.4289 14.984H46.0209V17.144C46.2769 16.408 46.6929 15.816 47.2689 15.368C47.8449 14.92 48.5009 14.696 49.2369 14.696C49.7489 14.696 50.1009 14.744 50.2929 14.84L49.9329 17.456C49.7889 17.36 49.4769 17.312 48.9969 17.312C48.2449 17.312 47.5569 17.552 46.9329 18.032C46.3249 18.512 46.0209 19.28 46.0209 20.336V26H43.4289V14.984ZM52.0539 14.984H54.6459V17.144C54.9019 16.408 55.3179 15.816 55.8939 15.368C56.4699 14.92 57.1259 14.696 57.8619 14.696C58.3739 14.696 58.7259 14.744 58.9179 14.84L58.5579 17.456C58.4139 17.36 58.1019 17.312 57.6219 17.312C56.8699 17.312 56.1819 17.552 55.5579 18.032C54.9499 18.512 54.6459 19.28 54.6459 20.336V26H52.0539V14.984ZM65.8869 26.24C64.7509 26.24 63.7429 25.984 62.8629 25.472C61.9829 24.96 61.3029 24.264 60.8229 23.384C60.3429 22.504 60.1029 21.528 60.1029 20.456C60.1029 19.4 60.3349 18.432 60.7989 17.552C61.2789 16.672 61.9589 15.976 62.8389 15.464C63.7189 14.952 64.7349 14.696 65.8869 14.696C67.0389 14.696 68.0469 14.952 68.9109 15.464C69.7909 15.976 70.4629 16.672 70.9269 17.552C71.4069 18.432 71.6469 19.4 71.6469 20.456C71.6469 21.528 71.4069 22.504 70.9269 23.384C70.4469 24.264 69.7669 24.96 68.8869 25.472C68.0229 25.984 67.0229 26.24 65.8869 26.24ZM65.9589 24.128C66.8869 24.128 67.6149 23.784 68.1429 23.096C68.6869 22.408 68.9589 21.544 68.9589 20.504C68.9589 19.464 68.6709 18.592 68.0949 17.888C67.5189 17.168 66.7589 16.808 65.8149 16.808C64.9029 16.808 64.1669 17.16 63.6069 17.864C63.0629 18.568 62.7909 19.448 62.7909 20.504C62.7909 21.528 63.0869 22.392 63.6789 23.096C64.2709 23.784 65.0309 24.128 65.9589 24.128ZM74.3429 14.984H76.9349V17.144C77.1909 16.408 77.6069 15.816 78.1829 15.368C78.7589 14.92 79.4149 14.696 80.1509 14.696C80.6629 14.696 81.0149 14.744 81.2069 14.84L80.8469 17.456C80.7029 17.36 80.3909 17.312 79.9109 17.312C79.1589 17.312 78.4709 17.552 77.8469 18.032C77.2389 18.512 76.9349 19.28 76.9349 20.336V26H74.3429V14.984Z"
+                    fill="#4C4949" />
+            </svg>
+            <img class="mirror-image" src="img/safari.jpg" alt="Mirror e-commerce website">
+        </div>
+
+
+    </div>
+
     <div class="content">
         <h1>MIRROR</h1>
         <div>
@@ -48,9 +65,10 @@
             <p>Objective</p>
 
             <div>
-                <li>Design a responsive e-commerce website that enables Mirror to sell their products to broader
+                <li>Design a responsive e-commerce website that enables Mirror to sell their products to a broader
                     audience and sell their leftover inventory.</li>
-                <li>Design a food filter function so that users can easily fillter through Mirror’s large catalog.</li>
+                <li>Design a good filter function so that users can easily fillter through Mirror’s large catalog.
+                </li>
             </div>
 
             <div class="objectives">
@@ -85,7 +103,7 @@
             <div>
                 <p>Competitive Analysis</p>
 
-                I started by researching Mirror's competitors and analyzed their strengths as well as their weaknesses.
+                I started by researching Mirror's competitors and analyzed their strengths and weaknesses.
                 It also helped me to understand what the competitors are doing differently in terms of their UI and UX.
             </div>
 
@@ -96,8 +114,7 @@
         <div class="mirror-grid">
             <div>
                 <p>1:1 User Interviews</p>
-                I conducted user interviews on 5 individuals aged 20-55 who purchased clothes online in the past three
-                months.
+                I conducted user interviews with 5 individuals aged 20-55 who purchased clothes online in the past three months.
             </div>
 
             <div><img class="mirror-content" src="img/Researchfindings.jpg" alt="Competitive analysis"></div>
@@ -105,7 +122,7 @@
 
         </div>
 
-    
+
 
 
 
@@ -144,11 +161,8 @@
 
             <div>
                 <p>Card Sorting and Site Map</p>
-                I recruited 7 individulas aged 23-50 to participate in a card sorting test to see how they categorized
-                each
-                card.
-                From the findings, I was able to make a site map of how information should be categorized
-                within the website.
+                I recruited 7 individulas aged 23-50 to participate in a card sorting test to see how they categorized each card.
+                From the findings, I was able to make a site map of how information should be categorized within the website.
             </div>
 
 
@@ -180,14 +194,14 @@
         <div class="mirror-grid">
             <div>
                 <p>Mid-Fidelity Responsive Wireframes</p>
-                I reviewed my sketches to create wireframes and decided to go with the v3.
+                I reviewed my sketches to create wireframes and decided to go with v3.
                 I added/moved some features to the wireframes given the user experience that it provides.
             </div>
             <div><img class="mirror-content" src="img/Responsivewireframes.jpg" alt="Responsive wireframes"></div>
         </div>
 
         <p>Wire Flows</p>
-        <img class="mirror-content" src="img/Wireframes.png" alt="Mirror, low-fi wireframes">
+        <img class="mirror-content" src="img/Wireframes.jpg" alt="Mirror, low-fi wireframes">
 
 
 
@@ -195,8 +209,8 @@
 
         <div class="text-space">
             <p>Hi-Fidelity Responsive Design</p>
-            I made hi-fidelity UI designs for desktop and mobile based on the wireframes.
-            I also wen† back to my persona to see if I was able to design to meet her needs.
+            I made hi-fidelity UI designs for both desktop and mobile based on the wireframes and color palette.
+            I also went back to check if the design was successful in meeting the needs of my persona.
 
         </div>
 
@@ -223,13 +237,12 @@
                 <a class="link"
                     href="https://www.figma.com/proto/usx6cHHmIUgIDamvgfNBaW/UI-Design?page-id=0%3A1&node-id=1%3A559&viewport=555%2C473%2C0.03870538994669914&scaling=contain"
                     target="_blank">View Prototype</a><br><br>
-                I conducted usability tests on 5 indivuduals aged 24-28 including frequent and less frequent
-                shoppers.
+                I conducted usability tests with 5 indivuduals aged 24-28 including both  frequent and less frequent shoppers.
                 <br><br>
                 My objectives are: <br>
                 <li>Understand overall impressioins of the website</li>
                 <li>Observe the interactions users make to navigate the website</li>
-                <li>Determine if the design delivers clear messages to the users</li>
+                <li>Determine if the design delivers a clear message to users</li>
 
 
             </div>
@@ -240,10 +253,9 @@
 
         <div class="mirror-grid">
             <div>
-                <p>Affirnity Map</p>
-                I synthesized the user test results and created an Affirnity Map.
-                It helped me to understand successes, frustrations, and what needs to improved in order to deliver
-                better experiences.
+                <p>Affinity Map</p>
+                I synthesized the user test results and created an Affinity Map.
+                It helped me to understand the successes, frustrations, and necessary improvements to deliver better experiences.
             </div>
             <div><img class="mirror-content" src="img/Affinity Map.jpg" alt="Affinity Map"></div>
         </div>
@@ -254,17 +266,12 @@
                 <a class="link"
                     href="https://www.figma.com/proto/usx6cHHmIUgIDamvgfNBaW/UI-Design?page-id=0%3A1&node-id=60%3A3628&viewport=543%2C566%2C0.036799125373363495&scaling=contain"
                     target="_blank">View Prototype</a><br><br>
-                I made revisons on the design based on the feedback I received from participants in my usability
-                test.
+                I made revisons on the design based on the feedback I received from participants in my usability test.
                 <br>
 
-
-
-                <li>I made the search box bigger since it looks cramped and make users not want click.</li>
-                <li>I moved "Spring Collection" into the Hero image so that it doesn't overlap with "New
-                    Collection".
+                <li>I made the search box bigger since it looked cramped and made users not want click on it.</li>
+                <li>I moved "Spring Collection" into the Hero image so that it doesn't overlap with "New Arrivals".
                 </li>
-
 
             </div>
             <div><img class="mirror-content" src="img/Mockup.jpg" alt="Revisions I made based on the user test">
@@ -282,16 +289,10 @@
     </div>
 
     <div class="content mirror-body text-space">
-        From all the design processes, I understand that a lot ot people like to shop in store to see the materials
-        or
-        the size of the items.
-        At the same time, online shopping helps them to save time when they don't have the time to go to physical
-        stores.
-        I also thought online shopping could be a pain and takes more time to find the information/items they want.
-        Even though it was my first project and I struggled to urtelize my newly learned skills,
-        I was able to think about users the whole process: how can I make it easier for them to find information
-        (shipping/returns) and items they want?
-
+        From all the design processes, I understand that a lot ot people like to shop in-store to see the materials and sizing of the products.
+        At the same time, online shopping helps them save time when they don't have the time to shop in person.
+        I also thought online shopping could be a pain and takes more time to find the information/products people want.
+        Even though it was my first project and I struggled to utelize my newly formed skills, I was able to think about users throughout the whole process—how can I make it easier for them to find the information (shipping/returns) and products they want?
     </div>
 
 
