--- a/Mirror.html
+++ b/Mirror.html
@@ -15,7 +15,7 @@
 
 
     <div class="nav">
-        <div class="content nav-content">
+        <div class="nav-content">
 
             <a class="logo" href="/"><svg width="113" height="37" viewBox="0 0 113 37" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
@@ -54,9 +54,10 @@
 
     </div>
 
+
     <div class="content">
-        <h1>MIRROR</h1>
-        <div>
+        <p>What is Mirror?</p>
+        <div class="mirror-body">
             Mirror is a successful clothing brand founded in 1994. They own more than 400 physical stores worldwide.
             Their target audience is people of all ages who care about affordable yet decent quality clothing.
         </div>
@@ -99,38 +100,37 @@
     <div class="content mirror-body">
 
 
-        <div class="mirror-grid">
-            <div>
-                <p>Competitive Analysis</p>
-
-                I started by researching Mirror's competitors and analyzed their strengths and weaknesses.
-                It also helped me to understand what the competitors are doing differently in terms of their UI and UX.
-            </div>
-
-            <div><img class="mirror-content" src="img/Competitive analysis.jpg" alt="Competitive analysis"></div>
 
 
-        </div>
-        <div class="mirror-grid">
-            <div>
-                <p>1:1 User Interviews</p>
-                I conducted user interviews with 5 individuals aged 20-55 who purchased clothes online in the past three months.
-            </div>
+        <p>Competitive Analysis</p>
 
-            <div><img class="mirror-content" src="img/Researchfindings.jpg" alt="Competitive analysis"></div>
+        I started by researching Mirror's competitors in order to understand who the competitors are and how
+        they are doing differently.
+        It mainly helped me to understand how each business establish its brand identity and what their focuses
+        are.
 
 
-        </div>
+        <img class="mirror-content" src="img/Competitive analysis.jpg" alt="Competitive analysis">
 
 
 
 
+
+        <p>1:1 User Interviews</p>
+        I conducted user interviews with 5 individuals aged 20-55 who purchased clothes online in the past three
+        months.
+        I wanted to collect qualitative data so that I can understand the users more.
+        I was able to collect useful information about their shopping habits and the problems they encounter
+        when shopping online.
+        I learned that the majority of participants prefer in-store shopping to see the products and sizes
+        in-person.
+        <img class="mirror-content" src="img/Researchfindings.jpg" alt="Competitive analysis">
 
 
     </div>
 
 
-
+    </div>
 
     <div class="stage">
 
@@ -143,43 +143,44 @@
 
     <div class="content mirror-body">
 
-        <div class="mirror-grid">
-            <div>
-                <p>Persona</p>
-
-                Based on the research results, I was able to create a persona that addresses major user needs.
-            </div>
 
 
+        <p>Persona</p>
+
+        Based on the research results, I created a persona that addresses major user needs so that I don't
+        forget who I'm designing this website for.
+        Since the majority of participants mentioned that they prefer in-store shoppings, I decided to design
+        the website so that they can enjoy shopping as much as they do in-store.
+
+        <img class="mirror-content" src="img/Persona.jpg" alt="Persona, Tiffany Song">
 
 
-            <div><img class="mirror-content" src="img/Persona.jpg" alt="Persona, Tiffany Song"></div>
-        </div>
 
 
-        <div class="mirror-grid">
+        <p>Card Sorting and Site Map</p>
+        Since there are so many categories/subcategories, I decided to do a card sorting testing so that users
+        can find items easily.
+        I recruited 7 individulas aged 23-50 to participate in a card sorting test to see how they categorized
+        each card.
+        From the findings, I was able to make a site map of how information should be categorized within the
+        website.
+        <img class="mirror-content" src="img/Sitemap.jpg" alt="Site Map">
 
-            <div>
-                <p>Card Sorting and Site Map</p>
-                I recruited 7 individulas aged 23-50 to participate in a card sorting test to see how they categorized each card.
-                From the findings, I was able to make a site map of how information should be categorized within the website.
-            </div>
+        <p>User Flow</p>
 
-
-            <div><img class="mirror-content" src="img/Sitemap.jpg" alt="Site Map"></div>
-        </div>
-
-
-        <div>
-            <p>Task and User Flow</p>
-
-        </div>
-        <div class="mirror-flows">
-            <div><img class="mirror-content" src="img/Task Flow.jpg" alt="Task FLow"></div>
-            <div><img class="mirror-content" src="img/User Flow.jpg" alt="User FLow"></div>
+        After creating a persona, I created a user flow to better understand and emphasize with the users.
+        Even though I have shopped online and I thought I knew everything, this become an important process to
+        analyze the each step.
+        This process helped me to form my idea of how the website should look like and what features are
+        important to have.
 
 
-        </div>
+
+        <img class="mirror-content" src="img/User Flow.jpg" alt="User FLow">
+    </div>
+
+
+
     </div>
 
     <div class="stage">
@@ -191,34 +192,19 @@
 
     <div class="content mirror-body">
 
-        <div class="mirror-grid">
-            <div>
-                <p>Mid-Fidelity Responsive Wireframes</p>
-                I reviewed my sketches to create wireframes and decided to go with v3.
-                I added/moved some features to the wireframes given the user experience that it provides.
-            </div>
-            <div><img class="mirror-content" src="img/Responsivewireframes.jpg" alt="Responsive wireframes"></div>
-        </div>
-
         <p>Wire Flows</p>
+        I created low-fi wireframes to visualize how the website will look like. It helped me to focus on flows rather than its UI so that all the processes make sense to the users. 
         <img class="mirror-content" src="img/Wireframes.jpg" alt="Mirror, low-fi wireframes">
 
 
+        <p>Hi-Fidelity Responsive Design</p>
+        I made hi-fidelity UI designs for both desktop and mobile based on the wireframes and color palette.
+        I also went back to check if the design was successful in meeting the needs of my persona.
+        I was aware that online shopping is different from in-store shopping, so I wanted to make other interfaces
+        very clear so that the users don't have to get frustrated by unnecessary steps.
 
-
-
-        <div class="text-space">
-            <p>Hi-Fidelity Responsive Design</p>
-            I made hi-fidelity UI designs for both desktop and mobile based on the wireframes and color palette.
-            I also went back to check if the design was successful in meeting the needs of my persona.
-
-        </div>
 
         <img class="mirror-content" src="img/hi-fi design2.jpg" alt="Responsive wireframes">
-
-
-
-
 
 
     </div>
@@ -231,54 +217,46 @@
     </div>
 
     <div class="content mirror-body">
-        <div class="mirror-grid">
-            <div>
-                <p>Prototype and Usability Test</p>
-                <a class="link"
-                    href="https://www.figma.com/proto/usx6cHHmIUgIDamvgfNBaW/UI-Design?page-id=0%3A1&node-id=1%3A559&viewport=555%2C473%2C0.03870538994669914&scaling=contain"
-                    target="_blank">View Prototype</a><br><br>
-                I conducted usability tests with 5 indivuduals aged 24-28 including both  frequent and less frequent shoppers.
-                <br><br>
-                My objectives are: <br>
-                <li>Understand overall impressioins of the website</li>
-                <li>Observe the interactions users make to navigate the website</li>
-                <li>Determine if the design delivers a clear message to users</li>
+
+        <p>Prototype and Usability Test</p>
+        <a class="link"
+            href="https://www.figma.com/proto/usx6cHHmIUgIDamvgfNBaW/UI-Design?page-id=0%3A1&node-id=1%3A559&viewport=555%2C473%2C0.03870538994669914&scaling=contain"
+            target="_blank">View Prototype</a><br><br>
+        I conducted usability tests with 5 indivuduals aged 24-28 including both frequent and less frequent
+        shoppers.
+        <br><br>
+        My objectives are: <br>
+        <li>Understand overall impressioins of the website</li>
+        <li>Observe the interactions users make to navigate the website</li>
+        <li>Determine if the design delivers a clear message to users</li>
+
+        <img class="mirror-content" src="img/Prototype.png" alt="Mirror Mock up, phone and laptop screens">
 
 
-            </div>
-            <div><img class="mirror-content" src="img/Prototype.png" alt="Mirror Mock up, phone and laptop screens">
-            </div>
-        </div>
+
+        <p>Affinity Map</p>
+        I synthesized the user test results and created an Affinity Map.
+        It helped me to understand the successes, frustrations, and necessary improvements to deliver better
+        experiences.
+        <img class="mirror-content" src="img/Affinity Map.jpg" alt="Affinity Map">
 
 
-        <div class="mirror-grid">
-            <div>
-                <p>Affinity Map</p>
-                I synthesized the user test results and created an Affinity Map.
-                It helped me to understand the successes, frustrations, and necessary improvements to deliver better experiences.
-            </div>
-            <div><img class="mirror-content" src="img/Affinity Map.jpg" alt="Affinity Map"></div>
-        </div>
+        <p>Priority Revision</p>
+        <a class="link"
+            href="https://www.figma.com/proto/usx6cHHmIUgIDamvgfNBaW/UI-Design?page-id=0%3A1&node-id=60%3A3628&viewport=543%2C566%2C0.036799125373363495&scaling=contain"
+            target="_blank">View Prototype</a><br><br>
+        I made revisons on the design based on the feedback I received from participants in my usability test so
+        that the website is less confusing to users.
+        <br>
 
-        <div class="mirror-grid">
-            <div>
-                <p>Priority Revision</p>
-                <a class="link"
-                    href="https://www.figma.com/proto/usx6cHHmIUgIDamvgfNBaW/UI-Design?page-id=0%3A1&node-id=60%3A3628&viewport=543%2C566%2C0.036799125373363495&scaling=contain"
-                    target="_blank">View Prototype</a><br><br>
-                I made revisons on the design based on the feedback I received from participants in my usability test.
-                <br>
+        <li>I made the search box bigger since it looked cramped and made users not want click on it.</li>
+        <li>I moved "Spring Collection" into the Hero image so that it doesn't overlap with "New Arrivals".
+        </li>
 
-                <li>I made the search box bigger since it looked cramped and made users not want click on it.</li>
-                <li>I moved "Spring Collection" into the Hero image so that it doesn't overlap with "New Arrivals".
-                </li>
-
-            </div>
-            <div><img class="mirror-content" src="img/Mockup.jpg" alt="Revisions I made based on the user test">
-            </div>
-        </div>
+        <img class="mirror-content" src="img/Mockup.jpg" alt="Revisions I made based on the user test">
 
     </div>
+
 
 
     <div class="stage">
@@ -289,11 +267,16 @@
     </div>
 
     <div class="content mirror-body text-space">
-        From all the design processes, I understand that a lot ot people like to shop in-store to see the materials and sizing of the products.
+        From all the design processes, I understand that a lot ot people like to shop in-store to see the materials and
+        sizing of the products.
         At the same time, online shopping helps them save time when they don't have the time to shop in person.
         I also thought online shopping could be a pain and takes more time to find the information/products people want.
-        Even though it was my first project and I struggled to utelize my newly formed skills, I was able to think about users throughout the whole process—how can I make it easier for them to find the information (shipping/returns) and products they want?
+        Even though it was my first project and I struggled to utelize my newly formed skills, I was able to think about
+        users throughout the whole process—how can I make it easier for them to find the information (shipping/returns)
+        and products they want?
     </div>
+
+
 
 
 
