--- a/Mirror.html
+++ b/Mirror.html
@@ -63,12 +63,12 @@
         </div>
 
         <div class="mirror-body">
-            <p>Objective</p>
+            <p>Objectives</p>
 
             <div>
                 <li>Design a responsive e-commerce website that enables Mirror to sell their products to a broader
                     audience and sell their leftover inventory.</li>
-                <li>Design a good filter function so that users can easily fillter through Mirror’s large catalog.
+                <li>Design a good filter function so that users can easily filter through Mirror’s large catalog.
                 </li>
             </div>
 
@@ -104,10 +104,9 @@
 
         <p>Competitive Analysis</p>
 
-        I started by researching Mirror's competitors in order to understand who the competitors are and how
+        I started by researching Mirror's competitors in order to understand who the competitors are and what
         they are doing differently.
-        It mainly helped me to understand how each business establish its brand identity and what their focuses
-        are.
+        It mainly helped me to understand how each business establishes its brand identity and what is focuses on.
 
 
         <img class="mirror-content" src="img/Competitive analysis.jpg" alt="Competitive analysis">
@@ -147,9 +146,8 @@
 
         <p>Persona</p>
 
-        Based on the research results, I created a persona that addresses major user needs so that I don't
-        forget who I'm designing this website for.
-        Since the majority of participants mentioned that they prefer in-store shoppings, I decided to design
+        Based on the research results, I created a persona that addresses the major user needs.
+        Since the majority of participants mentioned that they prefer in-store shopping, I decided to design
         the website so that they can enjoy shopping as much as they do in-store.
 
         <img class="mirror-content" src="img/Persona.jpg" alt="Persona, Tiffany Song">
@@ -158,9 +156,9 @@
 
 
         <p>Card Sorting and Site Map</p>
-        Since there are so many categories/subcategories, I decided to do a card sorting testing so that users
+        Since there are so many categories/subcategories, I decided to do card sorting testing so that users
         can find items easily.
-        I recruited 7 individulas aged 23-50 to participate in a card sorting test to see how they categorized
+        I recruited 7 individuals aged 23-50 to participate in a card sorting test to see how they categorized
         each card.
         From the findings, I was able to make a site map of how information should be categorized within the
         website.
@@ -168,10 +166,8 @@
 
         <p>User Flow</p>
 
-        After creating a persona, I created a user flow to better understand and emphasize with the users.
-        Even though I have shopped online and I thought I knew everything, this become an important process to
-        analyze the each step.
-        This process helped me to form my idea of how the website should look like and what features are
+        After creating a persona, I created a user flow to better understand and empathize with the users.
+        This process helped me to form my idea of how the website should look and what features are
         important to have.
 
 
@@ -193,15 +189,13 @@
     <div class="content mirror-body">
 
         <p>Wire Flows</p>
-        I created low-fi wireframes to visualize how the website will look like. It helped me to focus on flows rather than its UI so that all the processes make sense to the users. 
-        <img class="mirror-content" src="img/Wireframes.jpg" alt="Mirror, low-fi wireframes">
+        I created lo-fi wireframes to visualize how the website will look. It helped me to focus on user flows rather than the UI.
+        <img class="mirror-content" src="img/Wireframes.jpg" alt="Mirror, lo-fi wireframes">
 
 
-        <p>Hi-Fidelity Responsive Design</p>
-        I made hi-fidelity UI designs for both desktop and mobile based on the wireframes and color palette.
+        <p>Hi-Fi Responsive Design</p>
+        I made hi-fi UI designs for both desktop and mobile based on the wireframes and color palette.
         I also went back to check if the design was successful in meeting the needs of my persona.
-        I was aware that online shopping is different from in-store shopping, so I wanted to make other interfaces
-        very clear so that the users don't have to get frustrated by unnecessary steps.
 
 
         <img class="mirror-content" src="img/hi-fi design2.jpg" alt="Responsive wireframes">
@@ -222,15 +216,13 @@
         <a class="link"
             href="https://www.figma.com/proto/usx6cHHmIUgIDamvgfNBaW/UI-Design?page-id=0%3A1&node-id=1%3A559&viewport=555%2C473%2C0.03870538994669914&scaling=contain"
             target="_blank">View Prototype</a><br><br>
-        I conducted usability tests with 5 indivuduals aged 24-28 including both frequent and less frequent
+        I conducted usability tests with 5 individuals aged 24-28 including both frequent and infrequent
         shoppers.
         <br><br>
-        My objectives are: <br>
-        <li>Understand overall impressioins of the website</li>
+        My objectives were: <br>
+        <li>Understand overall impressions of the website</li>
         <li>Observe the interactions users make to navigate the website</li>
         <li>Determine if the design delivers a clear message to users</li>
-
-        <img class="mirror-content" src="img/Prototype.png" alt="Mirror Mock up, phone and laptop screens">
 
 
 
@@ -245,8 +237,7 @@
         <a class="link"
             href="https://www.figma.com/proto/usx6cHHmIUgIDamvgfNBaW/UI-Design?page-id=0%3A1&node-id=60%3A3628&viewport=543%2C566%2C0.036799125373363495&scaling=contain"
             target="_blank">View Prototype</a><br><br>
-        I made revisons on the design based on the feedback I received from participants in my usability test so
-        that the website is less confusing to users.
+        I made revisions on the design based on the feedback I received from participants in my usability test to make the website more intuitive.
         <br>
 
         <li>I made the search box bigger since it looked cramped and made users not want click on it.</li>
@@ -266,14 +257,10 @@
         </div>
     </div>
 
-    <div class="content mirror-body text-space">
-        From all the design processes, I understand that a lot ot people like to shop in-store to see the materials and
-        sizing of the products.
-        At the same time, online shopping helps them save time when they don't have the time to shop in person.
-        I also thought online shopping could be a pain and takes more time to find the information/products people want.
-        Even though it was my first project and I struggled to utelize my newly formed skills, I was able to think about
-        users throughout the whole process—how can I make it easier for them to find the information (shipping/returns)
-        and products they want?
+    <div class="content mirror-body">
+        <li>Users care about small details both consciously and unconsciously. The cramped search box, magnifying glass icon, and even colors can distract users from what's important.</li>
+        <li>A clean and simple interface makes users think everything will go smoothly (though it’s important to keep the interface intuitive).</li>
+        <li>It’s important to empathize with users. Each bit of research informed the final design.</li>
     </div>
 
 
