--- a/all-about-matcha.html
+++ b/all-about-matcha.html
@@ -96,7 +96,7 @@
 
         <p>Competitive Analysis</p>
 
-        I did research to understand the matcha market as well as to learn how people percieve
+        I did research to understand the matcha market as well as to learn how people perceive
         matcha.
         I learned that a) matcha consumption is increasing as a superfood and b) the majority of people associate
         matcha with ice cream, desserts, or lattes.
@@ -111,7 +111,8 @@
         <p>Survey</p>
 
         I conducted a survey to get overall impressions about matcha and Japanese Tea Ceremony.
-        I made an assumption that people associate Japanese Tea Ceremony with strict manners and
+        As I learned how people perceive matcha in competitive analysis, the majority of participants associated it with forms of desserts and drinks.
+        For Japanese Tea Ceremony, I made an assumption that people associate it with strict manners and
         a sophisticated atmosphere, so I wanted to get quantitative results from the survey.
         My assumption was fairly correct, while a few people said that it would be a relaxing and peaceful experience.
 
